--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,1 +1,4 @@
-@import './Partials/Header/Header'
+@import './Partials/Header/Header';
+@import './Partials/Home/dashboard';
+@import './Partials/Home/Content';
+@import './Partials/Footer/footer';
