--- a/src/styles/Partials/Header/_Header.scss
+++ b/src/styles/Partials/Header/_Header.scss
@@ -13,6 +13,7 @@
     align-items: center;
     z-index: 10;
     box-shadow: 0 3px 3px -2px rgba(0,0,0,20);
+    display: flex;
   }
 #logo{
     height: 40px;
@@ -66,11 +67,7 @@
     border-bottom: 5px white dashed;
   }
   
-  .moblie__hover__nav:hover {
-    margin-left: 50px;
-    -webkit-transition: ease-in-out 1.5s;
-    transition: ease-in-out 1.5s;
-  }
+ 
   
   .expanded {
     -webkit-transform: translate(0%);
