--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,3 +2,5 @@
 @import './Partials/Home/dashboard';
 @import './Partials/Home/Content';
 @import './Partials/Footer/footer';
+@import './Partials/Products/products';
+@import './Partials/Products/filter';
