WIP on filter and alerting user

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,3 +4,4 @@
 @import './Partials/Footer/footer';
 @import './Partials/Products/products';
 @import './Partials/Products/filter';
+@import './Partials/Alert/alertuser';
