--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1250,12 +1250,37 @@
 }
 
 .genre-form {
-  height: 100%;
+  height: 80%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[10];
-      grid-template-columns: repeat(10, 1fr);
-  -ms-grid-rows: (1fr)[10];
-      grid-template-rows: repeat(10, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+  font-size: 20px;
+  padding: 50px 10px;
+}
+
+.not-active-btn {
+  font-size: 20px;
+  outline: none;
+  border: none;
+  margin: 8px;
+  border-radius: 25px;
+  background: #dbdbdb;
+  border: .4px solid black;
+  outline: black;
+}
+
+.active-filter-btn {
+  font-size: 20px;
+  outline: none;
+  border: none;
+  margin: 8px;
+  border-radius: 25px;
+  border: .4px solid black;
+  outline: black;
+  background: black;
+  color: white;
 }
 /*# sourceMappingURL=App.css.map */
