--- a/src/styles/Partials/Products/_filter.scss
+++ b/src/styles/Partials/Products/_filter.scss
@@ -66,8 +66,31 @@
     text-align: center;
 }
 .genre-form{
-    height: 100%;
+    height: 80%;
     display: grid;
-    grid-template-columns: repeat(10,1fr);
-    grid-template-rows: repeat(10,1fr);
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,1fr);
+    font-size: 20px;
+    padding: 50px 10px;
+}
+.not-active-btn{
+    font-size: 20px;
+    outline: none;
+    border: none;
+    margin: 8px;
+    border-radius: 25px;
+    background: rgb(219, 219, 219);
+    border: .4px solid black;
+    outline: black;
+}
+.active-filter-btn{
+    font-size: 20px;
+    outline: none;
+    border: none;
+    margin: 8px;
+    border-radius: 25px;
+    border: .4px solid black;
+    outline: black;
+    background: rgb(0, 0, 0);
+    color: white;
 }
