adding contact page with style WIP

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,3 +5,4 @@
 @import './Partials/Products/products';
 @import './Partials/Products/filter';
 @import './Partials/Alert/alertuser';
+@import './Partials/Contact/contact';
