--- a/src/styles/Partials/Products/_filter.scss
+++ b/src/styles/Partials/Products/_filter.scss
@@ -59,10 +59,10 @@
     background: black;
     color: white;
 }
-.form-container{
+.filter-con{
     height: 85%;
 }
-.form-container h2{
+.filter-con h2{
     text-align: center;
 }
 .genre-form{
