--- a/src/styles/Partials/Contact/_contact.scss
+++ b/src/styles/Partials/Contact/_contact.scss
@@ -11,6 +11,27 @@
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
 }
+.contact--content{
+    padding-top: 20px;
+    padding-left:25px;
+    padding-right:25px;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.contact--content h1{
+    font-size: 75px;
+    padding-bottom: 20px;
+}
+.contact--content p{
+    font-weight: 500;
+    font-size: 20px;
+    margin:10px 0px ;
+}
+.contact--content span{
+    font-weight: 600;
+}
 .contact-form{
     height: 80vh;
     display: flex;
@@ -57,12 +78,13 @@
 @media only screen and (min-width: 800px){
     .contact-container{
         flex-direction: row;
+        height: 90vh;
     }
     .contact-form{
         width: 50%;
     }
     .contact-directions{
-        width: 50%;
+        width: 50%
     }
 
 }
