--- a/src/styles/Partials/Header/_Header.scss
+++ b/src/styles/Partials/Header/_Header.scss
@@ -11,7 +11,7 @@
     justify-content: space-around;
     flex-direction: row-reverse;
     align-items: center;
-    z-index: 10;
+    z-index: 100;
     box-shadow: 0 3px 3px -2px rgba(0,0,0,20);
     display: flex;
   }
@@ -21,7 +21,7 @@
 .moblie-nav-bar {
     display: block;
     position: fixed;
-    top: 70px;
+    top: 60px;
     right: 0;
     left: -100;
     height: 100%;
@@ -31,7 +31,7 @@
             transform: translate(100%);
     -webkit-transition: all 0.2s ease;
     transition: all 0.2s ease;
-    z-index: 10;
+    z-index: 100;
   }
   
   .moblie-nav-bar a {
@@ -132,10 +132,10 @@
 .moblie__nav__backdrop{
   width: 100%;
   position: absolute;
-  top: 70px;
+  top: 60px;
   background: rgb(0, 0, 0);
   opacity: 80%;
-  z-index: 2;
+  z-index: 99;
   height: 100vh;
   display: block;
 }
@@ -143,6 +143,14 @@
 @media only screen and (min-width: 800px){
   .nav--bar-container{
     height: 70px;
+  }
+  .moblie-nav-bar{
+    width: 100%;
+    height: 20%;
+  }
+  .moblie-nav-bar ul{
+    flex-direction: row;
+    justify-content:space-evenly;
   }
 #logo{
     height: 50px;
