--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1244,7 +1244,6 @@
   width: 100%;
   height: 60px;
   background: white;
-  opacity: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1380,7 +1379,7 @@
   position: absolute;
   top: 60px;
   background: black;
-  opacity: 80%;
+  opacity: 80% !important;
   z-index: 99;
   height: 100vh;
   display: block;
