--- a/src/styles/Partials/Header/_Header.scss
+++ b/src/styles/Partials/Header/_Header.scss
@@ -6,7 +6,6 @@
     width: 100%;
     height: 60px;
     background: white;
-    opacity: 100%;
     display: flex;
     justify-content: space-around;
     flex-direction: row-reverse;
@@ -133,7 +132,7 @@
   position: absolute;
   top: 60px;
   background: rgb(0, 0, 0);
-  opacity: 80%;
+  opacity: 80% !important;
   z-index: 99;
   height: 100vh;
   display: block;
