--- a/src/styles/Partials/Header/_Header.scss
+++ b/src/styles/Partials/Header/_Header.scss
@@ -132,7 +132,7 @@
   position: absolute;
   top: 60px;
   background: rgb(0, 0, 0);
-  opacity: 80% !important;
+  opacity: 0.8 !important;
   z-index: 99;
   height: 100vh;
   display: block;
