--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1378,8 +1378,7 @@
   width: 100%;
   position: absolute;
   top: 60px;
-  background: black;
-  opacity: 80% !important;
+  background: rgba(0, 0, 0, 0.8);
   z-index: 99;
   height: 100vh;
   display: block;
