--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1013,7 +1013,7 @@
 .fitler-based-genre {
   position: fixed;
   overflow: hidden;
-  z-index: 10;
+  z-index: 999;
   top: 0px;
   left: 0px;
   height: 100%;
@@ -1104,6 +1104,32 @@
   outline: black;
   background: black;
   color: white;
+}
+
+.alert-container {
+  height: 90vh;
+  padding-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.alert-image {
+  height: 300px;
+  margin-bottom: 25px;
+}
+
+.alert-container p {
+  font-size: 50px;
+  font-weight: 600;
+  text-align: center;
 }
 
 .contact-container {
