adding finishing touches

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,3 +6,4 @@
 @import './Partials/Alert/alertuser';
 @import './Partials/Contact/contact';
 @import './Partials/Header/Header';
+@import './Partials/Products/item';
