--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1448,4 +1448,59 @@
     transition: all 0.2s ease;
   }
 }
+
+.item-container {
+  display: block;
+  height: 100vh;
+  padding: 25px;
+  position: fixed;
+  color: white;
+  background: black;
+  top: 0px;
+  width: 100vw;
+  z-index: 100;
+}
+
+.item-container a {
+  color: white;
+  font-size: 50px;
+  padding-left: 25px;
+}
+
+.item-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.item-content h1 {
+  margin-top: 25px;
+}
+
+.item-content h2 {
+  margin-bottom: 25px;
+}
+
+.item-content img {
+  height: 300px;
+  margin: 50px 0px;
+}
+
+.item-content button {
+  color: black;
+  margin: 15px 0px;
+  padding: 15px;
+  border-radius: 25px;
+  background: white;
+}
 /*# sourceMappingURL=App.css.map */
