--- a/src/styles/Partials/Products/_item.scss
+++ b/src/styles/Partials/Products/_item.scss
@@ -37,3 +37,9 @@
     border-radius: 25px;
     background: white;
 }
+.error-message{
+    margin-top: 50px;
+    text-align: center;
+    font-size: 50px;
+    padding:0px 20px;
+}
