--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,11 +20,11 @@
   padding: 0px 25px;
   height: 300px;
   overflow-y: hidden;
-  overflow-x: hidden;
+  overflow-x: scroll;
 }
 
 .highlight-container button {
-  display: block;
+  display: none;
 }
 
 .slide-btn {
@@ -607,15 +607,19 @@
   }
 }
 
+button {
+  outline: none;
+}
+
 .footer-container {
-  height: 70vh;
+  height: 100vh;
   background: #dfdfdf;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
-  -ms-grid-rows: (1fr)[10];
-      grid-template-rows: repeat(10, 1fr);
+  -ms-grid-rows: (1fr)[6];
+      grid-template-rows: repeat(6, 1fr);
 }
 
 .about-harmony {
@@ -655,7 +659,7 @@
 }
 
 .get--email {
-  height: 100px;
+  height: 40%;
   border-top: 1px solid grey;
   border-bottom: 1px solid grey;
   -ms-grid-row: 3;
@@ -677,9 +681,11 @@
 }
 
 .get--email button {
+  background-color: #d5d5d5;
   height: 100%;
   width: 100%;
   font-size: 18px;
+  border-radius: none;
 }
 
 .get--email i {
@@ -690,9 +696,9 @@
 .footer-social-links {
   height: 100px;
   border-bottom: 1px solid grey;
-  -ms-grid-row: 5;
-  -ms-grid-row-span: 2;
-  grid-row: 5/span 2;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/span 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/span 2;
@@ -716,9 +722,9 @@
 
 .footer-page-links {
   border-bottom: 1px solid grey;
-  -ms-grid-row: 7;
-  -ms-grid-row-span: 3;
-  grid-row: 7/span 3;
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 1;
+  grid-row: 5/span 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/span 2;
@@ -747,6 +753,7 @@
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/span 2;
+  padding-top: 50px;
   text-align: center;
   margin-top: 5px;
 }
@@ -765,6 +772,7 @@
     margin-bottom: 20px;
   }
   .get--email {
+    height: 100px;
     -ms-grid-row: 3;
     -ms-grid-row-span: 2;
     grid-row: 3/span 2;
@@ -784,11 +792,16 @@
     background: none;
     z-index: 1;
     cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: none;
     transition: 0.08s ease-in;
     -o-transition: 0.08s ease-in;
     -ms-transition: 0.08s ease-in;
     -moz-transition: 0.08s ease-in;
     -webkit-transition: 0.08s ease-in;
+    width: 100%;
+    height: 100%;
   }
   .get--email button:hover {
     color: white;
@@ -1502,5 +1515,12 @@
   padding: 15px;
   border-radius: 25px;
   background: white;
+}
+
+.error-message {
+  margin-top: 50px;
+  text-align: center;
+  font-size: 50px;
+  padding: 0px 20px;
 }
 /*# sourceMappingURL=App.css.map */
