--- a/src/styles/Partials/Footer/_footer.scss
+++ b/src/styles/Partials/Footer/_footer.scss
@@ -1,9 +1,12 @@
+button{
+    outline: none;
+}
 .footer-container{
-    height: 70vh;
+    height: 100vh;
     background: rgb(223, 223, 223);
     display: grid;
     grid-template-columns:repeat(2,1fr);
-    grid-template-rows:repeat(10,1fr);
+    grid-template-rows:repeat(6,1fr);
 }
 .about-harmony{
     padding: 0px 25px;
@@ -33,7 +36,7 @@
     margin-bottom:20px ;
 }
 .get--email {
-    height: 100px;
+    height: 40%;
     border-top: 1px solid grey ;
     border-bottom: 1px solid grey ;
     grid-row: 3/span 2;
@@ -44,9 +47,11 @@
     font-size: 18px;
 }
 .get--email button{
+    background-color:rgb(213, 213, 213) ;
     height: 100%;
     width: 100%;
     font-size: 18px;
+    border-radius: none;
 }
 .get--email i{
     font-size: 25px;
@@ -55,7 +60,7 @@
 .footer-social-links{
     height: 100px;
     border-bottom: 1px solid grey ;
-    grid-row: 5/span 2;
+    grid-row: 4/span 1;
     grid-column: 1/span 2;
     display: flex;
     justify-content: space-evenly;
@@ -69,7 +74,7 @@
 }
 .footer-page-links{
     border-bottom: 1px solid grey ;
-    grid-row: 7/span 3;
+    grid-row: 5/span 1;
     grid-column: 1/span 2;
 }
 .footer-page-links h3{
@@ -87,6 +92,7 @@
 
 .copyright{
     grid-column: 1/span 2;
+    padding-top: 50px;
     text-align: center;
     margin-top: 5px;
 }
@@ -104,6 +110,7 @@
         margin-bottom:20px ;
     }
     .get--email {
+        height: 100px;
         grid-row: 3/span 2;
         grid-column: 1/span 1;
     }
@@ -120,11 +127,16 @@
         background: none;
         z-index: 1;
         cursor: pointer;
+        outline: none;
+        border: none;
+        border-radius: none;
         transition:         0.08s ease-in;
         -o-transition:      0.08s ease-in;
         -ms-transition:     0.08s ease-in;
         -moz-transition:    0.08s ease-in;
         -webkit-transition: 0.08s ease-in;
+        width: 100%;
+        height: 100%;
     }
 
     .get--email button:hover {
